    otherwise, libraries get installed in the wrong place on Debian.
    (Issue #512.)

  - The HOA parser used to silently declare unused and undefined states
    (e.g., when the State: header declare many more states than the body
    of the file).  It now warns about those.

  - 'autfilt -c ...' should display a match count even in present of
    parse errors.

New in spot 2.11.2  (2022-10-26)

  Command-line tools:

  - The --stats specifications %s, %e, %t for printing the number of
    (reachable) states, edges, and transitions, learned to support
    options [r], [u], [a] to indicate if only reachable, unreachable,
    or all elements should be counted.

  Library:

  - spot::reduce_parity() now has a "layered" option to force all
    transition in the same parity layer to receive the same color;
    like acd_transform() would do.

  Bugs fixed:

  - Fix pkg-config files containing @LIBSPOT_PTHREAD@ (issue #520)
  - spot::relabel_bse() was incorrectly relabeling some dependent
    Boolean subexpressions in SERE.  (Note that this had no
    consequence on automata translated from those SERE.)

New in spot 2.11.1  (2022-10-10)

  Bugs fixed:

  - Fix a build issue preventing the update of website (issue #516).
  - Fix a compilation error with clang-14 on FreeBSD (issue #515).

New in spot 2.11  (2022-10-08)

  Build:

  - configure will now diagnose situations where Python bindings will
    be installed in a directory that is not part of Python's search
    path.  A new configure option --with-pythondir can be used to
    modify this installation path.

  - A new configure option --enable-pthread enables the compilation of
    Spot with -pthread, and render available the parallel version of
    some algorithms.  If Spot is compiled with -pthread enabled, any
    user linking with Spot should also link with the pthread library.
    In order to not break existing build setups using Spot, this
    option is currently disabled by default in this release.  We plan